fix: rework burst keyframes for visible continuous expansion

--- a/src/screens/VictoryScreen/styles.module.scss
+++ b/src/screens/VictoryScreen/styles.module.scss
@@ -24,17 +24,43 @@
 
 @keyframes burst {
   0% {
-    opacity: 1;
+    opacity: 0;
     transform: scale(0);
     box-shadow:
-       0  -30px 0 -1px rgba(232, 200, 74, 0.8),
-       21px -21px 0 -1px rgba(232, 200, 74, 0.7),
-       30px  0   0 -1px rgba(232, 200, 74, 0.6),
-       21px  21px 0 -1px rgba(232, 200, 74, 0.7),
-       0   30px 0 -1px rgba(232, 200, 74, 0.8),
-      -21px  21px 0 -1px rgba(232, 200, 74, 0.6),
-      -30px  0   0 -1px rgba(232, 200, 74, 0.7),
-      -21px -21px 0 -1px rgba(232, 200, 74, 0.6);
+       0  -30px 0 0px rgba(232, 200, 74, 0.8),
+       21px -21px 0 0px rgba(232, 200, 74, 0.7),
+       30px  0   0 0px rgba(232, 200, 74, 0.6),
+       21px  21px 0 0px rgba(232, 200, 74, 0.7),
+       0   30px 0 0px rgba(232, 200, 74, 0.8),
+      -21px  21px 0 0px rgba(232, 200, 74, 0.6),
+      -30px  0   0 0px rgba(232, 200, 74, 0.7),
+      -21px -21px 0 0px rgba(232, 200, 74, 0.6);
+  }
+  15% {
+    opacity: 1;
+    transform: scale(0.4);
+    box-shadow:
+       0  -40px 0 1px rgba(232, 200, 74, 0.8),
+       28px -28px 0 1px rgba(232, 200, 74, 0.7),
+       40px  0   0 1px rgba(232, 200, 74, 0.6),
+       28px  28px 0 1px rgba(232, 200, 74, 0.7),
+       0   40px 0 1px rgba(232, 200, 74, 0.8),
+      -28px  28px 0 1px rgba(232, 200, 74, 0.6),
+      -40px  0   0 1px rgba(232, 200, 74, 0.7),
+      -28px -28px 0 1px rgba(232, 200, 74, 0.6);
+  }
+  70% {
+    opacity: 0.4;
+    transform: scale(1.4);
+    box-shadow:
+       0  -75px 0 0px rgba(232, 200, 74, 0.25),
+       53px -53px 0 0px rgba(232, 200, 74, 0.2),
+       75px  0   0 0px rgba(232, 200, 74, 0.15),
+       53px  53px 0 0px rgba(232, 200, 74, 0.2),
+       0   75px 0 0px rgba(232, 200, 74, 0.25),
+      -53px  53px 0 0px rgba(232, 200, 74, 0.15),
+      -75px  0   0 0px rgba(232, 200, 74, 0.2),
+      -53px -53px 0 0px rgba(232, 200, 74, 0.15);
   }
   100% {
     opacity: 0;
@@ -105,7 +131,7 @@
   height: 4px;
   border-radius: 50%;
   background: transparent;
-  animation: burst 2.2s ease-out both infinite;
+  animation: burst 2.2s linear backwards infinite;
 
   &:nth-child(1) { animation-delay: 4.0s; animation-duration: 2.6s; }
   &:nth-child(2) { animation-delay: 4.7s; animation-duration: 2.2s; }
